--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "web",
   "version": "0.1.0",
-  "homepage": "https://tanmayska11.github.io/portfulio",
   "private": true,
   "dependencies": {
     "aos": "^2.3.4",
@@ -17,9 +16,8 @@
     "start:legacy": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build -b gh-pages"
+    "eject": "react-scripts eject"
+    
   },
   "eslintConfig": {
     "extends": [
