--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "web",
   "version": "0.1.0",
+  "homepage": "https://tanmayska11.github.io/portfulio1",
   "private": true,
   "dependencies": {
     "aos": "^2.3.4",
@@ -13,10 +14,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "start:legacy": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+    "start:legacy": "set NODE_OPTIONS=--openssl-legacy-provider && re act-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build -b gh-pages"
     
   },
   "eslintConfig": {
