--- a/package.json
+++ b/package.json
@@ -10,15 +10,13 @@
     "react-icons": "^5.4.0",
     "react-scripts": "^5.0.1",
     "typed.js": "^2.1.0"
-    
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "HOST=0.0.0.0 NODE_OPTIONS=--max-old-space-size=1024 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build -b gh-pages"
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -38,4 +36,5 @@
       "last 1 safari version"
     ]
   }
+  
 }
