--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-scripts": "^5.0.1",
-    "typed.js": "^2.1.0"
+    "typed.js": "^2.1.0",
+    "serve": "^14.2.0"
   },
   "scripts": {
-    "start": "HOST=0.0.0.0 NODE_OPTIONS=--max-old-space-size=1024 react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -36,5 +37,4 @@
       "last 1 safari version"
     ]
   }
-  
 }
